Ingress/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: crds-ingress
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        app: crds-ingress
    spec:
      containers:
      - name: crds-ingress
        image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.20.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "2Gi"
            cpu: "3100m"
          requests:
            memory: "250Mi"
            cpu: "200m"
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 3000
          hostPort: 3000
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        args:
        - /nginx-ingress-controller
        - --configmap=$(POD_NAMESPACE)/crds-ingress-nginx-config
        - --tcp-services-configmap=$(POD_NAMESPACE)/nginx-tcp-ingress-conf
        - --default-ssl-certificate=$(POD_NAMESPACE)/crossroads-ssl
        - --annotations-prefix=nginx.ingress.kubernetes.io
        - --ingress-class=nginx
        - --watch-namespace=$(POD_NAMESPACE)
