Ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crds-ingress-service
spec:
  type: LoadBalancer
  loadBalancerIP: $CROSSROADS_NET_IP
  ports:
  - name: http
    port: 80
  - name: https
    port: 443
  - name: email
    port: 3000
  selector:
    app: crds-ingress
