Ingress/rules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: crds-ingress
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - $MAESTRO_HOST_NAME
    - $CMS_HOST_NAME
    - $GO_LOCAL_HOST_NAME
    - $API_HOST_NAME
    secretName: crossroads-ssl
  rules:
  - host: $MAESTRO_HOST_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: maestro-varnish-service
          servicePort: 80
      - path: /serve-signup/
        backend:
          serviceName: crds-serve-service
          servicePort: 80
      - path: /media
        backend:
          serviceName: redirect-service
          servicePort: 80
      - path: /series
        backend:
          serviceName: redirect-service
          servicePort: 80
      - path: /message
        backend:
          serviceName: redirect-service
          servicePort: 80
      - path: /podcasts
        backend:
          serviceName: redirect-service
          servicePort: 80
  - host: $CMS_HOST_NAME
    http:
      paths:
      - path: /api/
        backend:
          serviceName: cms-varnish-service
          servicePort: 80
      - path: /
        backend:
          serviceName: cms-ss-admin-service
          servicePort: 80
  - host: $GO_LOCAL_HOST_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: go-local-service
          servicePort: 80
  - host: $CRDS_FORM_BUILDER_FRONTEND_HOST_NAME
    http:
      paths:
      - path: /
        backend:
          serviceName: crds-form-builder-frontend-service
          servicePort: 80
  - host: $API_HOST_NAME
    http:
      paths:
      - path: /fred
        backend:
          serviceName: fred-service
          servicePort: 80
